option java_package = "com.lin.coprocessor.generated";
option java_outer_classname = "BSVCoprocessorProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message BSVColumn{java
	required bytes family=1;
	required bytes column=2;
}

message Condition{
	required BSVColumn column=1;
	required bytes operator=2;
	required bytes value=3;
}

message ParameterMessage{
	repeated BSVColumn column=1;
	repeated Condition condition=2;
	repeated bytes aggregation=3;
	optional bytes joinKey=4;
	optional bytes aggregationKey=5;
	optional bytes joinTable=6;
	optional bool isMaterialize=7;
	optional bool isReturningResults=8;
	optional bytes SQL=9;
	optional bool isBuildJoinView=10;
	optional bytes viewName=11;
}

message KeyValue{
	required bytes rowKey=1;
	required bytes key=2;
	required bytes value=3;
}

message BSVRow{
	repeated KeyValue keyValue=2;
}

message ResultMessage{
	repeated BSVRow row=1;
	optional int64 size=2 [default = 0];
}

service Execute{
	rpc batch(ParameterMessage)
		returns (ResultMessage);
}